@@ -1,6 +1,5 @@
-#AUTOMAKE_OPTIONS = foreign dist-tarZ #distdir=$(PACKAGE)$(VERSION)
 #AUTOMAKE_OPTIONS = util/ansi2knr foreign dist-tarZ no-dependencies
-AUTOMAKE_OPTIONS = util/ansi2knr foreign dist-tarZ
+AUTOMAKE_OPTIONS = util/ansi2knr foreign
 
 SUBDIRS = \
 	scripts \
@@ -19,39 +18,46 @@ SUBDIRS = \
 	kernel	\
 	util
 
-EXTRA_DIST = ChangeLog COPYRIGHT NEWS README.cvs README.des README.hackers TODO WHERE-TO-START acconfig.h config.guess config.h.in config.sub excludes flock-build install-sh dot.emacs build NOTES.y2kfixes readme.y2kfixes results.y2kfixes
+EXTRA_DIST = \
+	COPYRIGHT \
+	ChangeLog \
+	NEWS \
+	NOTES.y2kfixes \
+	README.cvs \
+	README.des \
+	README.hackers \
+	README.rsa \
+	TODO \
+	WHERE-TO-START \
+	acconfig.h \
+	build \
+	config.guess \
+	config.h.in \
+	config.sub \
+	dot.emacs \
+	excludes \
+	flock-build \
+	install-sh \
+	ntp_update \
+	readme.y2kfixes \
+	results.y2kfixes \
+	conf \
+	html \
+	ports
+
 #ETAGS_ARGS = $(srcdir)/Makefile.am $(srcdir)/configure.in
 ETAGS_ARGS = Makefile.am configure.in acconfig.h
 
-# DIST_CPDIRS = conf html scripts 
-# DIST_MKDIRS = adjtime clockstuff kernel libparse ppsclock
-#DIST_HOOK_DIRS = conf html patches ports scripts
 # HMS: make ports be the last directory...
-DIST_HOOK_DIRS = conf html scripts ports
+# DIST_HOOK_DIRS = conf html scripts ports
 
 BUILT_SOURCES = $(srcdir)/COPYRIGHT
 
 $(srcdir)/COPYRIGHT: html/copyright.htm
 	( echo "This file is automatically generated from html/copyright.htm" ; lynx -dump $(srcdir)/html/copyright.htm ) > $(srcdir)/COPYRIGHT.new && mv $(srcdir)/COPYRIGHT.new $(srcdir)/COPYRIGHT
 
-# local-dist: dist-tarZ
-
 dist-hook:
-	-for i in $(DIST_HOOK_DIRS); do \
-	  mkdir $(distdir)/$$i ; \
-	  cp -rp $(srcdir)/$$i $(distdir) ; \
-	done ; \
-	find $(distdir) -type d -name CVS -exec rm -rf '{}' \; ; \
-	# find $(distdir)/html -name '*.htm' -exec dos2unix {} {} \; ; \
-	# cp -rp $(srcdir)/include/winnt $(distdir)/include
-
-dist-export: distdir
-	rm $(distdir)/libntp/authdes.c
-	cp $(distdir)/libntp/authdes.c.export $(distdir)/libntp/authdes.c
-	chmod -R a+r $(distdir)
-	mv $(distdir) $(distdir)-export
-	$(TAR) chozf $(distdir)-export.tar.gz $(distdir)-export
-	rm -rf $(distdir)-export
+	@find $(distdir) -type d -name CVS -print | xargs rm -rf
 
 Makefile: .warning
 
