@@ -1,1 +1,3 @@
 noinst_SCRIPTS = calc_tickadj checktime freq_adj mkver ntp-wait ntpsweep ntpver plot_summary summary
+EXTRA_DIST = fixautomakedepsmagic hpadjtime.sh monitoring ntp-groper \
+	ntp-restart ntp-status rc1 rc2 stats support
